# azure-test

./: .pypirc  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg
src/example/: calculator.py  file.py
tests/integration/example/: test_integration_calculator.py
tests/unit/example/: test_unit_calculator.py
