[metadata]
name = example-pkg-saif
version = 1.0
author = Your Name
author_email = your.email@example.com
description = A short description of your project

[options]
package_dir = 
    = src
packages = find:
install_requires =
    
    # Add any other dependencies here

python_requires= >3.6


[options.packages.find]
where = src
    
